--- a/styles/board/board.module.css
+++ b/styles/board/board.module.css
@@ -6,8 +6,10 @@
 }
 
 .post_list {
+    background-color: var(--level-1);
+    border-radius: 1rem;
     gap: 2rem;
-    margin: 1rem 0 8rem;
+    margin: .5rem .5rem 8rem;
 }
 
 .post_item_wrap {
@@ -18,7 +20,7 @@
 }
 
 .post_item_wrap:hover {
-    background-color: var(--level-1);
+    background-color: var(--level-2);
     box-shadow: var(--shadow);
 }
 
@@ -75,7 +77,7 @@
     z-index: 1;
     top: 0;
     margin: 0 .5rem;
-    background-color: var(--menu-background);
+    background-color: var(--level-2-opacity);
     backdrop-filter: blur(.5rem);
     border-radius: 1rem;
 }
@@ -89,8 +91,9 @@
     word-break: keep-all;
     padding: 1rem 1.25rem;
     border-radius: 1.5rem;
-    background-color: var(--level-1);
+    background-color: var(--level-3);
     transition: .25s;
+    box-shadow: var(--shadow);
 }
 
 .category_list li:hover {
@@ -98,7 +101,7 @@
 }
 
 .category_list .active {
-    background-color: var(--level-2);
+    background-color: var(--level-1);
 }
 
 .refresh {
