--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -25,7 +25,7 @@
     max-width: 132rem;
     width: 100%;
     border-radius: 1rem;
-    background-color: var(--menu-background);
+    background-color: var(--level-3-opacity);
     backdrop-filter: blur(3px);
     box-shadow: var(--shadow);
 }
