--- a/styles/meister/ranking.module.css
+++ b/styles/meister/ranking.module.css
@@ -21,7 +21,7 @@
     align-items: center;
     width: 5rem;
     height: 5rem;
-    background-color: var(--background);
+    background-color: var(--level-0);
     border-radius: 50%;
     font-weight: bold;
     margin-right: 2rem;
