--- a/styles/board/board.module.css
+++ b/styles/board/board.module.css
@@ -41,7 +41,7 @@
 }
 
 .post_title {
-    font-size: 2.2rem;
+    font-size: 2rem;
     text-align: left;
     font-weight: bold;
 }
@@ -126,17 +126,18 @@
 
 .write {
     position: fixed;
-    bottom: 1rem;
-    right: 1rem;
-    background-color: var(--level-2);
+    bottom: 2rem;
+    right: 2rem;
+    background-color: var(--level-4);
     border-radius: 50%;
     transition: .25s;
+    box-shadow: var(--shadow);
 }
 
 .write img {
-    width: 5rem;
-    height: 5rem;
-    padding: 1.5rem;
+    width: 5.5rem;
+    height: 5.5rem;
+    padding: 1.65rem;
 }
 
 @media screen and (min-width: 0) and (max-width: 1023px) {
@@ -146,7 +147,7 @@
     }
 
     .post_title {
-        font-size: 1.7rem;
+        font-size: 1.6rem;
     }
 
     .total_comments {
