ADD: 시간표 추가, 삭제, 편집 기능

--- a/styles/common/input.module.css
+++ b/styles/common/input.module.css
@@ -18,7 +18,7 @@
     border: none;
     outline: none;
     width: 100%;
-    padding: 1.5rem;
+    padding: 1.3rem 1.5rem;
     font-weight: bold;
     font-size: 1.5rem;
     color: var(--text);
