ADD: 시간표 관리 목록 불러오기 및 저장

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -10,6 +10,7 @@
     font-size: 1.6rem;
     font-weight: bold;
     user-select: none;
+    pointer-events: none;
 }
 
 .top_menu_bar .dropdown:first-child :global(.dropdown-content) {
@@ -28,6 +29,7 @@
     background-color: var(--level-3-opacity);
     backdrop-filter: blur(3px);
     box-shadow: var(--shadow);
+    pointer-events: all;
 }
 
 .item {
