--- a/styles/timetable/timetable-manage.module.css
+++ b/styles/timetable/timetable-manage.module.css
@@ -103,6 +103,7 @@
     z-index: 2;
     top: 0;
     right: 0;
+    transform: translateX(100%);
     width: 30rem;
     height: 100%;
     padding: 1rem .5rem .5rem;
@@ -111,6 +112,27 @@
     justify-content: space-between;
     background-color: var(--level-5-opacity);
     backdrop-filter: blur(.5rem);
+    transition: .25s;
+}
+
+.side_bar .on_off {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 5rem;
+    height: 5rem;
+    background-color: var(--level-5-opacity);
+    transform: translate(-100%, -50%);
+    border-radius: 1rem 0 0 1rem;
+    cursor: pointer;
+}
+
+.side_bar.open {
+    transform: translateX(0%);
 }
 
 @media screen and (min-width: 0px) and (max-width: 1910px) {
@@ -118,7 +140,7 @@
         margin-top: 6.5rem;
         height: calc(100% - 6.5rem);
         padding: .5rem;
-        border-radius: 1rem 0;
+        border-radius: 1rem 0 0;
     }
 }
 
