--- a/styles/meister/ranking.module.css
+++ b/styles/meister/ranking.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: .75rem;
     font-size: 2rem;
+    padding: 0 .5rem;
 }
 
 .ranking_list li {
@@ -10,9 +11,15 @@
     align-items: center;
     padding: 1rem;
     padding-right: 2rem;
-    background-color: var(--level-1);
+    background-color: var(--level-3);
     border-radius: 2rem;
     box-shadow: var(--shadow);
+    cursor: pointer;
+    transition: .25s;
+}
+
+.ranking_list li:hover {
+    background-color: var(--hover);
 }
 
 .rank {
