--- a/styles/common/banner.module.css
+++ b/styles/common/banner.module.css
@@ -1,7 +1,7 @@
 .banner {
     position: fixed;
     z-index: 5;
-    border-radius: 1rem;
+    border-radius: .5rem;
     overflow: hidden;
 }
 
@@ -9,7 +9,8 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    padding: .25rem .5rem;
+    padding: 0 .25rem;
+    font-size: 1.4rem;
     content: '광고';
     color: white;
     background-color: rgba(0, 0, 0, .5);
@@ -21,9 +22,9 @@
 
 .banner.horizontal,
 .banner.horizontal img {
-    max-width: 70rem;
+    max-width: 40rem;
     width: calc(100% - 1rem);
-    height: 7rem;
+    height: 4rem;
 }
 
 .banner.horizontal img {
@@ -32,8 +33,8 @@
 
 .banner.vertical,
 .banner.vertical img {
-    width: 9rem;
-    max-height: 60rem;
+    width: 4rem;
+    max-height: 30rem;
     height: 100%;
 }
 
@@ -61,20 +62,10 @@
 }
 
 .banner.right {
-    right: 1rem;
+    right: 1.5rem;
 }
 
-@media screen and (min-width: 0) and (max-width: 1500px) {
-    .banner.vertical,
-    .banner.vertical img {
-        width: 7rem;
-        max-height: 50rem;
-        height: 100%;
-        object-fit: fill;
-    }
-}
-
-@media screen and (min-width: 0) and (max-width: 1160px) {
+@media screen and (min-width: 0) and (max-width: 1300px) {
     .banner.vertical {
         display: none;
     }
@@ -83,5 +74,15 @@
 @media screen and (min-width: 0) and (max-width: 720px) {
     .banner.top {
         top: 6rem;
+    }
+
+    .banner.bottom {
+        bottom: 0rem;
+    }
+}
+
+@media screen and (min-height: 0) and (max-height: 600px) {
+    .banner.horizontal {
+        display: none;
     }
 }
