--- a/styles/meister/index.module.css
+++ b/styles/meister/index.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 2rem;
-    padding: 0 .5rem;
+    padding: 0 .5rem 6rem 0;
 }
 
 .point {
