FIX: 상벌점 표시 방식 변경

--- a/styles/board/post.module.css
+++ b/styles/board/post.module.css
@@ -110,6 +110,7 @@
         font-size: 1.6rem;
     }
 
+    .user_profile,
     .user_profile img {
         width: 4rem !important;
         height: 4rem !important;
