FIX: #3 게시글 메뉴 접근성 향상, 드롭다운 메뉴 컴포넌트화

--- a/styles/board/post.module.css
+++ b/styles/board/post.module.css
@@ -106,6 +106,10 @@
         font-size: 1.3rem;
     }
 
+    .post_info :global(.post-dropdown-menu) {
+        display: none;
+    }
+
     .title {
         font-size: 1.6rem;
     }
