ADD: 모바일 환경에서 커뮤니티 이전글 다음글 이동 기능

--- a/styles/board/post/post-nav-sidebar.module.css
+++ b/styles/board/post/post-nav-sidebar.module.css
@@ -1,3 +1,9 @@
+@media screen and (min-width: 0) and (max-width: 1220px) {
+    .nav_wrap {
+        display: none;
+    }
+}
+
 .nav_wrap a {
     display: flex;
     justify-content: center;
@@ -61,6 +67,7 @@
     font-size: 1.6rem;
     white-space: nowrap;
     opacity: 0;
+    transition: .25s;
     pointer-events: none;
 }
 
