--- a/styles/board/comment.module.css
+++ b/styles/board/comment.module.css
@@ -1,8 +1,9 @@
 .comment_wrap {
     overflow: auto;
-    margin: 5rem 0;
-    background-color: var(--level-1);
-    border-radius: 2rem;
+    margin: 2rem 0 5rem;
+    background-color: var(--level-3);
+    border-radius: 1rem;
+    box-shadow: var(--shadow);
 }
 
 .item_wrap {
