--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -7,7 +7,7 @@
     left: 0;
     width: 100%;
     padding: 1rem .5rem;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     font-weight: bold;
     user-select: none;
     pointer-events: none;
@@ -19,13 +19,14 @@
 }
 
 .top_menu_bar .dropdown li {
-    width: 16rem;
+    width: 14rem;
 }
 
 .header .top {
     max-width: 132rem;
     width: 100%;
-    border-radius: 1rem;
+    padding: .5rem;
+    border-radius: .75rem;
     background-color: var(--level-3-opacity);
     backdrop-filter: blur(3px);
     box-shadow: var(--shadow);
@@ -37,32 +38,25 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border-radius: 1rem;
+    border-radius: .75rem;
     transition: .25s;
-    padding: 1.4rem 2.2rem;
+    padding: 1.3rem 1.8rem;
     user-select: none;
 }
 
-.item:active {
-    transform: scale(.8);
-}
-
-.top li .item:not(.all_menu, .setting) {
+.top li .item.home {
     height: 100%;
-    padding: 0 2.2rem;
+    padding: 0 1.8rem;
 }
 
 .home {
-    font-size: 2.2rem;
+    font-size: 2rem;
     letter-spacing: -.1rem;
 }
 
-.home .item {
-    padding: 0 1.5rem;
-}
-
 .item.all_menu {
-    padding: 1.4rem 1.1rem;
+    padding: 0 1.1rem;
+    height: 100%;
 }
 
 .item:hover {
@@ -77,6 +71,7 @@
 
 .top_menu_bar :is(.left, .right) {
     display: flex;
+    gap: .5rem;
 }
 
 .top_menu_bar :is(.left, .right) > li:not(.dropdown) {
@@ -100,12 +95,12 @@
 }
 
 .top_menu_bar > .title {
-    font-size: 2.2rem;
+    font-size: 2rem;
     display: flex;
 }
 
 .top_menu_bar .left .title {
-    font-size: 2rem;
+    font-size: 1.8rem;
     display: none;
 }
 
@@ -144,7 +139,7 @@
     display: flex;
     justify-content: center;
     transition: right .4s;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
 }
 
 .side.on {
@@ -172,7 +167,7 @@
     pointer-events: none;
 }
 
-.side .menus > li {
+.side .menus > :is(li, .dropdown) {
     pointer-events: all;
 }
 
@@ -217,13 +212,13 @@
 }
 
 .setting {
-    width: 5.2rem;
-    height: 5.2rem;
-    padding: 1.25rem !important;
+    width: 4.4rem;
+    height: 4.4rem;
+    padding: 1.1rem !important;
 }
 
 .setting img {
-    width: 3rem;
+    width: 2.2rem;
     filter: var(--bright);
 }
 
